--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body{
   font-family: 'Inter-Regular';
   font-size: 1rem;
   width: 100vw;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   overflow-x: hidden;
 }
 ul{
